Fix header icon flash and page jump

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,16 @@
 }
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+
+  @supports not (scrollbar-gutter: stable) {
+    html {
+      overflow-y: scroll;
+    }
+  }
+
   body {
     @apply font-normal leading-normal;
   }
@@ -160,6 +170,13 @@
 
   .lucide {
       @apply inline-block;
+      vertical-align: -0.125em;
+  }
+
+  i[data-lucide] {
+      display: inline-block;
+      width: 1em;
+      height: 1em;
       vertical-align: -0.125em;
   }
 
